# block-producer-locator

./: .gitignore  ARCHITECTURE.md  DECISIONS.md  PROJECT.md  TASKS.md  pyproject.toml
.github/: copilot-instructions.md
.github/code-review/: tasks-1x-review.md
bpl/: __init__.py  aggregator.py  cli.py  config.py  dns.py  geoip.py  models.py  output.py  persistence.py
bpl/probes/: __init__.py  base_l2.py  bsc.py  ethereum.py  optimism.py  starknet.py  tron.py
tests/: conftest.py  test_aggregator.py  test_cli.py  test_config.py  test_dns.py  test_geoip.py  test_models.py  test_output.py  test_persistence.py  test_probes.py
